fixed overflow issue for first heading for starwars

--- a/wikia/releases/200807.1/skins/monaco/css/monobook_modified.css
+++ b/wikia/releases/200807.1/skins/monaco/css/monobook_modified.css
@@ -256,6 +256,7 @@ span.subpages {
 }
 .firstHeading {
 	margin-bottom: .1em;
+	overflow: visible;
 }
 
 /* user notification thing */
